[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/SourceCodePro-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/SourceCodePro-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_top = 0.32
anchor_right = 1.0
anchor_bottom = 0.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "AimExp"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_top = 0.47
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Menu"]
margin_right = 1920.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 3 )
text = "Start"
flat = true

[node name="OptionsButtion" type="Button" parent="Menu"]
margin_top = 97.0
margin_right = 1920.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 3 )
text = "Options"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenButton" type="Button" parent="Menu"]
margin_top = 194.0
margin_right = 1920.0
margin_bottom = 281.0
custom_fonts/font = SubResource( 3 )
text = "Fullscreen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SC" type="ScrollContainer" parent="."]
visible = false
anchor_top = 0.47
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scenes" type="VBoxContainer" parent="SC"]
margin_right = 1920.0
margin_bottom = 572.4
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OWNT" type="Button" parent="SC/Scenes"]
margin_right = 1920.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 3 )
text = "1 wall n targets"
flat = true

[node name="Smoothsphere" type="Button" parent="SC/Scenes"]
margin_top = 97.0
margin_right = 1920.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 3 )
text = "Smoothsphere"
flat = true

[node name="Back" type="Button" parent="SC/Scenes"]
margin_top = 194.0
margin_right = 1920.0
margin_bottom = 281.0
custom_fonts/font = SubResource( 3 )
text = "Back"
flat = true
